// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render App correctly 1`] = `
<div>
  <Header
    as="h2"
  >
    <Icon
      as="i"
      name="users"
    />
    <HeaderContent>
      Social Me Die
    </HeaderContent>
  </Header>
  <List />
</div>
`;

exports[`Should render App correctly with data 1`] = `
<div>
  <Header
    as="h2"
  >
    <Icon
      as="i"
      name="users"
    />
    <HeaderContent>
      Social Me Die
    </HeaderContent>
  </Header>
  <List>
    <ListItem
      key="1"
    >
      Fake Activity 1
    </ListItem>
    <ListItem
      key="2"
    >
      Fake Activity 2
    </ListItem>
  </List>
</div>
`;
